<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_login" />

    <TextView
        android:id="@+id/nav_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nav_login_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_email" />

    <TextView
        android:id="@+id/nav_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nav_email_hint" />
    
</LinearLayout>
