<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textview_main_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:text="@string/main_profile"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_all_title"
        app:layout_constraintBottom_toTopOf="@id/textview_main_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textview_main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:hint="@string/main_namehint"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toTopOf="@id/textview_main_email"
        app:layout_constraintLeft_toLeftOf="@id/textview_main_profile"
        app:layout_constraintTop_toBottomOf="@id/textview_main_profile" />

    <TextView
        android:id="@+id/textview_main_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:hint="@string/main_emailhint"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toTopOf="@id/textView_main_phone"
        app:layout_constraintLeft_toLeftOf="@id/textview_main_profile"
        app:layout_constraintTop_toBottomOf="@id/textview_main_name" />

    <TextView
        android:id="@+id/textView_main_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:hint="@string/main_phonehint"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintLeft_toLeftOf="@id/textview_main_profile"
        app:layout_constraintTop_toBottomOf="@id/textview_main_email" />

    <Button
        android:id="@+id/button_main_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_all_view"
        android:layout_marginEnd="@dimen/margin_all_view"
        android:text="@string/main_button_edit"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_main_send_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_all_view"
        android:layout_marginStart="@dimen/margin_all_view"
        android:text="@string/main_send_name"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_main_name_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_all_view"
        android:text="@string/main_name"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintRight_toLeftOf="@id/textview_main_name"
        app:layout_constraintTop_toTopOf="@id/textview_main_name" />

    <TextView
        android:id="@+id/textview_main_email_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_all_view"
        android:text="@string/main_email"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintRight_toLeftOf="@id/textview_main_email"
        app:layout_constraintTop_toTopOf="@id/textview_main_email" />

    <TextView
        android:id="@+id/textview_main_phone_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_all_view"
        android:text="@string/main_phone"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintRight_toLeftOf="@id/textView_main_phone"
        app:layout_constraintTop_toTopOf="@id/textView_main_phone" />

</android.support.constraint.ConstraintLayout>