<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/textview_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:text="@string/edit_title"
        android:textSize="@dimen/textsize_all_title"
        app:layout_constraintBottom_toTopOf="@id/edittext_edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edittext_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:hint="@string/edit_name"
        android:inputType="text"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toTopOf="@id/edittext_edit_email"
        app:layout_constraintLeft_toLeftOf="@id/textview_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/textview_edit_profile" />

    <EditText
        android:id="@+id/edittext_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toTopOf="@id/edittext_edit_phone"
        app:layout_constraintLeft_toLeftOf="@id/textview_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/edittext_edit_name" />

    <EditText
        android:id="@+id/edittext_edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_all_view"
        android:hint="@string/edit_phone"
        android:maxLength="11"
        android:inputType="phone"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintLeft_toLeftOf="@id/textview_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/edittext_edit_email" />

    <Button
        android:id="@+id/button_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_all_view"
        android:layout_marginEnd="@dimen/margin_all_view"
        android:text="@string/edit_save"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_edit_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_all_view"
        android:layout_marginStart="@dimen/margin_all_view"
        android:text="@string/edit_cancel"
        android:textSize="@dimen/textsize_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>